--- a/Samsung/Samsung.css
+++ b/Samsung/Samsung.css
@@ -375,7 +375,34 @@ header {
 
 /* ----------------------------------------Section:4--------------------------------------------------------- */
 
-
+#content5 {
+    height: auto;
+}
+#content5 .neo  {
+    margin-top: -148px;
+    position: absolute;
+    margin-left: 836px;
+    color: white;
+    text-align: center;
+    font-size: 13px;
+    font-weight: bolder;
+}
+#content5 .neo button {
+    height: 40px;
+    width: 105px;
+    border-radius: 15px;
+    background-color: black;
+    color: white;
+    text-align: center;
+    font-weight: 500;
+}
+#content5 .neo button:hover {
+    background-color: white;
+    color: black;
+    height: 43px;
+    width: 110px;
+    transition: 0.7s all ease;
+}
 .tvvbar {
     text-align: center;
 }
@@ -397,4 +424,237 @@ header {
     font-family: 'SamsungOne',arial,sans-serif;
     font-weight: 600;
     color: black;
+}
+.tvvbar button:hover {
+    border: dotted;
+    border-radius: 20px;
+    background-color: black;
+    color: white;
+ }
+
+
+#content5 .neo1 {
+    margin-top: -162px;
+    position: absolute;
+    margin-left: 796px;
+    color: #1c1a1a;
+    text-align: center;
+    font-size: 18px;
+    font-weight: 700;
+}
+#content5 .neo1 button {
+    height: 40px;
+    width: 105px;
+    border-radius: 15px;
+    background-color: black;
+    color: white;
+    text-align: center;
+    font-weight: 500;
+}
+#content5 .neo1 button:hover {
+    background-color: white;
+    color: black;
+    height: 43px;
+    width: 110px;
+    transition: 0.7s all ease;
+}
+
+
+#content5 .neo2 {
+    margin-top: -368px;
+    position: absolute;
+    margin-left: 484px;
+    color: white;
+    text-align: center;
+    font-size: 20px;
+    font-weight: 700;
+}
+
+#content5 .neo2 button {
+    height: 40px;
+    width: 105px;
+    border-radius: 15px;
+    background-color: black;
+    color: white;
+    text-align: center;
+    font-weight: 500;
+}
+#content5 .neo2 button:hover {
+    background-color: white;
+    color: black;
+    height: 43px;
+    width: 110px;
+    transition: 0.7s all ease;
+}
+
+#content5 .neo3 {
+    margin-top: -148px;
+    position: absolute;
+    margin-left: 885px;
+    color: #1c1a1a;
+    text-align: center;
+    font-size: 15px;
+    font-weight: 700;
+}
+#content5 .neo3 button {
+    height: 40px;
+    width: 105px;
+    border-radius: 15px;
+    background-color: black;
+    color: white;
+    text-align: center;
+    font-weight: 500;
+}
+#content5 .neo3 button:hover {
+    background-color: white;
+    color: black;
+    height: 43px;
+    width: 110px;
+    transition: 0.7s all ease;
+}
+
+
+
+/* ----------------------------------Section 5 ------------------------------------------------------------ */
+
+#content6 .pro {
+    position: absolute;
+    margin-top: -193px;
+    margin-left: 827px;
+    text-align: center;
+    color: white;
+}
+#content6 .pro button {
+    height: 45px;
+    width: 157px;
+    border-radius: 17px;
+}
+#content6 .pro button:hover {
+    color:white;
+    background-color: black;
+    height: 47px;
+    width: 162px;
+    transition: 0.5s all ease;
+}
+#content6 .pro1 {
+    position: absolute;
+    margin-top: -175px;
+    margin-left: 882px;
+    text-align: center;
+    color: white;
+}
+#content6 .pro1 button {
+    height: 45px;
+    width: 157px;
+    border-radius: 17px;
+}
+#content6 .pro1 button:hover {
+    color:white;
+    background-color: black;
+    height: 47px;
+    width: 162px;
+    transition: 0.5s all ease;
+}
+#content6 .pro2 {
+        position: absolute;
+        margin-top: -193px;
+        margin-left: 827px;
+        text-align: center;
+        color: #141619;
+}
+#content6 .pro2 button {
+    height: 45px;
+    width: 157px;
+    border-radius: 17px;
+}
+#content6 .pro2 button:hover {
+    color:white;
+    background-color: black;
+    height: 47px;
+    width: 162px;
+    transition: 0.5s all ease;
+}
+#content6 .pro3 {
+    position: absolute;
+    margin-top: -175px;
+    margin-left: 637px;
+    text-align: center;
+    color: #141619;
+}
+#content6 .pro3 button {
+    height: 45px;
+    width: 157px;
+    border-radius: 17px;
+}
+#content6 .pro button:hover {
+    color:white;
+    background-color: black;
+    height: 47px;
+    width: 162px;
+    transition: 0.5s all ease;
+}
+
+
+/* -----------------------------------------------Section 7--------------------------------------------- */
+
+#content7 .explore6 {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+#content7 .explore7 {
+    text-align: center;
+    margin-top: 30px;
+}
+#content7 ul li {
+    list-style: none;
+    padding: 30px;
+}
+#content7 .explore6 img {
+    height: 660px;
+    width: 660px;
+    margin: 20px;
+    padding: 20px;
+    border-radius: 75px;
+}
+.eximg7{
+    height: auto;
+    width: 100%;
+    overflow: hidden;
+}
+.eximg7 .changeImage {
+    width: 100%;
+    transition: transform 0.4s ease-in-out;
+    transform-origin: 50% 50%;
+}
+.eximg7 .changeImage:hover {
+    width: 100%;
+    transform: scale(1.1);
+}
+#content7 .excontent7 {
+    margin: 20px;
+    padding: 20px;
+}
+
+#content7 .excontent7 .tips h5:hover {
+    font-size: 21px;
+}
+#content7 .excontent7 .feel h5:hover {
+    font-size: 21px;
+}
+#content7 .excontent7 .host h5:hover {
+    font-size: 21px;
+}
+#content7 .excontent7 .meet1 h5:hover {
+    font-size: 21px;
+}
+#content7 .excontent7 .fest1 h5:hover {
+    font-size: 21px;
+}
+
+
+
+/* ------------------Section 8----------------------------------------- */
+
+#content8 .look7 {
+    text-align: center;
 }
